--- a/Lab/Lab4/consumer/code/templates/web.html
+++ b/Lab/Lab4/consumer/code/templates/web.html
@@ -3,9 +3,9 @@
    <body>
       <h1>Do you know what are you going to eat today?</h1>
       <h3>I will give you some recommendation.</h3>
-         <h4>Meal:</h4>
-            <p>{{ name }}</p>
-         <h4>Price</h4>
+         <h4>meal:</h4>
+            <p>{{ meal }}</p>
+         <h4>price:</h4>
             <p>{{ price }}</p>
    </body>
 </html>
